# ada-cli

./: .gitignore  Makefile  README.md  ada.yaml  go.mod  go.sum  main.go  parse_python.py  spec.yaml
cmd/: chat.go  config.go  container.go  create.go  dependency.go  help.go  install.go  listproject.go  projects.go  root.go  start.go  sync.go  version.go
examples/python/: ada.yaml  pyproject.toml
internal/: main.go  project_selector.go
internal/ada/: config.go  load.go  metadata.go  types.go  version.go
internal/api/: ada_service.go  client.go  login.go  service.go
internal/cache/: cache.go  templates.go
internal/chat/: bubble.go  chat.go  model.go  prompt.go  styles.go  update.go  vertex_ai_service.go  view.go
internal/cmd/: execute.go  execute_test.go  styled.go
internal/common/: logger.go
internal/container/: build.go  push.go  run.go
internal/create/: project_creator.go
internal/golang/: dependency.go  install.go  start.go
internal/nodejs/: dependency.go  install.go  start.go
internal/projects/: client.go  create.go  graph.go  sync.go
internal/python/: dependency.go  install.go  start.go
internal/styles/: styles.go
internal/template/: list.go  render.go
internal/terraform/: dependency.go  install.go  start.go
internal/theme/: design.go  helpers.go  theme.go
